--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.100.0
 uvicorn[standard]>=0.20.0
 typer[all]>=0.9.0
+rich>=13.0.0
 grpcio>=1.50.0
 grpcio-tools>=1.50.0
 protobuf>=4.20.0
